# heat_transfer_MPI

./: .gitignore  A_Lire.txt  CMakeLists.txt  CMakelists.txt  Param.h  README.md  annotated.html  classes.html  doxygen_crawl.html  files.html  index.html  main.cpp  md_README.html  merge.h  merge_8h_source.html  pages.html  param.h  param.json  param_8h_source.html  parameters.json  plot_T.py  plot_mpi.py  run.bat  run.sh  solve.cpp  solve.h  solve_8h_source.html  structParam-members.html  structParam.html
graph/: plot_T.py  plot_mpi.py
include/: merge.h  param.h  solve.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_8.js  searchdata.js
src/: main.cpp  solve.cpp
